--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "5ba75eb1",
    "metadata": {},
    "outputs": [
@@ -863,24 +863,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SIMULATION RESULTS:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'results_ex5' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 189\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sp \u001b[38;5;129;01min\u001b[39;00m start_points:\n\u001b[0;32m    188\u001b[0m     sp_key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(sp)\n\u001b[1;32m--> 189\u001b[0m     data \u001b[38;5;241m=\u001b[39m results_ex5[sp_key]\n\u001b[0;32m    191\u001b[0m     \u001b[38;5;66;03m# Print the header for this start point\u001b[39;00m\n\u001b[0;32m    192\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m--- Processing Start Point: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msp\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ---\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'results_ex5' is not defined"
-     ]
     }
    ],
    "source": [
@@ -906,14 +888,13 @@
     "    dL/dt2 = 200*(t2 - t1^2)\n",
     "    \"\"\"\n",
     "    t1, t2 = theta[0], theta[1]\n",
-    "    \n",
     "    grad_t1 = -2 * (1 - t1) - 400 * t1 * (t2 - t1**2)\n",
     "    grad_t2 = 200 * (t2 - t1**2)\n",
     "    \n",
     "    return np.array([grad_t1, grad_t2])\n",
     "\n",
     "# ---------------------------------------------------------\n",
-    "# 2. Solver Utilities (Adapted from your Exercise 4)\n",
+    "# 2. Solver Utilities\n",
     "# ---------------------------------------------------------\n",
     "\n",
     "def gd_constant_step(loss_f, gradient_f, start_theta, learning_rate, n_iterations):\n",
@@ -1064,6 +1045,19 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4ccd504",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "\n",
+    "- **Entering the Valley:** **Yes, immediately.** All methods (both constant step and Backtracking) successfully descend the steep walls and enter the parabolic valley within the first few iterations. This is visible as the initial sharp vertical drop in the Loss plots and the long straight trajectory lines heading toward the curve.\n",
+    "- **Time to \"Turn\":** **The turn is fast, but progress stalls.** The trajectories hit the valley floor and \"turn\" almost instantly. However, for constant step sizes, the momentum dies immediately after the turn because the gradient becomes tiny. Only Backtracking (Red line) maintains enough speed to actually move *along* the valley direction towards the minimum.\n",
+    "- **Zig-Zagging:** **Visible in Backtracking.** You can see significant zig-zagging (oscillation) in the Backtracking trajectory (Red line) for the start point `[0, 2]`. It bounces back and forth across the steep valley walls before the adaptive step size shrinks enough to stabilize it. The constant step sizes shown are too small to cause visible zig-zagging; they just crawl.\n",
+    "- **Step Size Issues:** **Constant steps become too small.** The fixed learning rates (Cyan, Orange, Blue lines) are adequate for the steep walls but become uselessly small on the flat valley floor, causing the algorithms to \"freeze\" (flat horizontal lines in the Loss plots). Backtracking solves this by keeping step sizes large enough to move along the flat floor without diverging."
    ]
   }
  ],
