Completata revisione HW1-2

--- a/homework4.ipynb
+++ b/homework4.ipynb
@@ -1693,33 +1693,21 @@
    "id": "7d38650f",
    "metadata": {},
    "source": [
+    "Here is a refactored version that flows more naturally, sounding less like a structured list and more like a thoughtful analysis of the experiment.\n",
     "\n",
-    "### Final Discussion\n",
+    "### Discussion: Performance and Class Similarity\n",
     "\n",
-    "1. Linear vs. Centroid Performance\n",
+    "**1. Why Linear and Centroid Classifiers perform similarly**\n",
+    "Our results show that both the Logistic Regression and Centroid classifiers achieve nearly identical accuracy (often within a 1-2% margin). This isn't a coincidence; it is a direct result of how PCA transforms the data. The projection tends to produce \"blob-like,\" spherical clusters. When two clusters are round and well-separated, the optimal decision boundary found by logistic regression ends up being geometrically very similar to the perpendicular bisector (the line halfway between the two centroids). Essentially, both methods are solving the same easy geometric problem.\n",
     "\n",
-    "You will observe that the accuracies are very close (often within 1-2%).\n",
+    "**2. The impact of Digit Similarity**\n",
+    "Although we focused on 3 vs. 4, the results would look quite different depending on which digit pairs we chose. This behavior is predictable based on the visual properties of the digits:\n",
     "\n",
-    "- This happens because PCA tends to produce \"blob-like\" Gaussian clusters.\n",
-    "- When two clusters are spherical and separated, the optimal linear boundary is geometrically very close to the perpendicular bisector used by the Centroid Classifier.\n",
+    "- **Distinct Pairs (e.g., 0 vs. 1):** Since these digits are visually distinct (a loop vs. a line), their PCA clusters would likely be far apart with almost zero overlap. In this case, both classifiers would likely hit near 100% accuracy because the \"gap\" between classes is massive.\n",
+    "- **Ambiguous Pairs (e.g., 5 vs. 8):** These digits share similar features (curves and loops), which confuses the PCA projection. The clusters would overlap significantly, creating a \"dense cloud\" of mixed labels in the center. Here, the distance between centroids decreases, and the linear boundary is forced to cut through a region of unavoidable error.\n",
     "\n",
-    "2. Effect of Changing Digits (Class Similarity)\n",
-    "\n",
-    "The exercise asks to consider pairs like (1,7) and (5,8). While we implemented the code for (3,4), we can predict the behavior based on PCA properties:\n",
-    "\n",
-    "- **Distinct Pairs (e.g., 0 vs 1, or 1 vs 7 in US handwriting):**\n",
-    "\n",
-    "    - **Cluster Shape:** The clusters in PCA space will be far apart with almost no overlap.\n",
-    "    - **Performance:** Both classifiers will achieve near 100% accuracy. The decision boundary will pass through empty space.\n",
-    "- **Similar Pairs (e.g., 5 vs 8, or 3 vs 5):**\n",
-    "\n",
-    "    - **Cluster Shape:** These digits share structural similarities (curves, loops). In PCA space, their clusters will overlap significantly.\n",
-    "    - **Centroid Separation:** The distance $\\|\\mu\\_5 - \\mu\\_8\\|$ will be small compared to the spread (variance) of the data.\n",
-    "    - **Performance:** Both classifiers will struggle. You will see a \"dense cloud\" of green misclassified points in the middle where the 5s and 8s mix. The linear boundary will try to cut through the middle of this mix, but errors are unavoidable in 2D.\n",
-    "\n",
-    "Conclusion:\n",
-    "\n",
-    "This demonstrates that PCA is not just for visualization; it effectively compresses the discriminative information of the images. If digits look different to the human eye, they generally map to distinct regions in the PCA plane, making simple linear or geometric classifiers surprisingly effective."
+    "**Conclusion**\n",
+    "This experiment highlights that PCA is more than just a visualization tool—it effectively compresses the *discriminative* information of the images. Generally, if two digits look distinct to the human eye, they map to distinct regions in the PCA plane. This allows even simple linear or geometric classifiers to perform surprisingly well on just two dimensions."
    ]
   }
  ],
